tests/snapshots/run_wpt_conformance__litert_gemm_both_negative_options_alpha_and_1st_float16_input_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm both negative options.alpha and 1st float16 input tensor, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([100, 57, 80, 55, 178, 59, 210, 57, 54, 59, 180, 58, 17, 59, 244, 57, 224, 44, 137, 52, 189, 56, 138, 55, 214, 59, 196, 56, 160, 56, 177, 57, 46, 59, 173, 58, 234, 53, 132, 57]);
    operand_2: f16[3, 5] @bytes([225, 53, 190, 58, 92, 40, 226, 57, 47, 42, 118, 59, 252, 56, 113, 59, 99, 42, 154, 59, 69, 56, 192, 47, 240, 48, 142, 59, 177, 52]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=-22.611149749186296, bTranspose=false, beta=1.0, c=2, label="");
  }

  outputs { gemmOutput; }
}
