tests/snapshots/run_wpt_conformance__litert_gemm_both_negative_options_alpha_and_1st_float32_input_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gemm.https.any.js",
    "gemm both negative options.alpha and 1st float32 input tensor",
    "litert",
    "PASS",
)
